Change line-height of basic input to 1 in order to align input texts correctly due to new @defaultInputHeight.

--- a/mixins/basicinput.less
+++ b/mixins/basicinput.less
@@ -18,7 +18,7 @@
   margin-top: @margin;
   margin-bottom: @margin;
   font-size: 1em;
-  line-height: @lineHeight;
+  line-height: 1;
   font-weight: @fontWeightLight;
   height: @height;
   .mq-print({
